[2008-08-22]
  - fixed bug with attribute cache not clearing on write for date and time columns [reported by Sylvestre Mergulhão]
  - parse method returns Date object for date column assigned string as per normal Rails behaviour
  - parse method returns same object type when assigned Date or Time object as per normal Rails behaviour
  
[2008-08-07]
  - modified matcher option value parsing to allow same value types as validation method
  - fixed matcher message

[2008-08-02]
  - refactored validation
  - refactored matcher
  
[2008-07-30]
  - removed setting values to nil when validation fails to preserve before_type_cast value