@@ -1,4 +1,3 @@
 raise "Rails version must be 2.0 or greater to use validates_timeliness plugin" if Rails::VERSION::MAJOR < 2
 
 require 'validates_timeliness'
-ValidatesTimeliness::Formats.remove_us_formats
